compiler/testData/cli/js/compilationWarningExposureOfReferencesToInvisibleEntities.out
compiler/testData/cli/js/compilationWarningExposureOfReferencesToInvisibleEntities.kt:6:40: error: callable reference to 'private-in-class' declaration 'foo' inside 'internal' inline declaration.
internal inline fun internalFun2() = ::foo
                                       ^^^
COMPILATION_ERROR
